# helix

./: .claude-session-state.md  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TOKENOMICS.md
.github/: release-body.md
.github/workflows/: ci.yml  gui.yml  release.yml
crates/helix-cli/: Cargo.toml
crates/helix-cli/src/: fee.rs  keyfile.rs  lib.rs  main.rs
crates/helix-cli/src/commands/: chain.rs  contract.rs  governance.rs  identity.rs  mod.rs  name.rs  recovery.rs  tx.rs  validator.rs  wallet.rs
crates/helix-consensus/: Cargo.toml
crates/helix-consensus/src/: engine.rs  evidence.rs  lib.rs  proposal.rs  round.rs  validator.rs  vote.rs  vote_set.rs
crates/helix-core/: Cargo.toml
crates/helix-core/src/: block.rs  fee.rs  lib.rs  transaction.rs
crates/helix-crypto/: Cargo.toml
crates/helix-crypto/src/: address.rs  error.rs  hash.rs  kem.rs  keyfile.rs  keys.rs  lib.rs
crates/helix-executor/: Cargo.toml
crates/helix-executor/src/: genesis.rs  governance.rs  lib.rs  receipt.rs  state.rs
crates/helix-identity/: Cargo.toml
crates/helix-identity/src/: lib.rs  name.rs  personhood.rs  recovery.rs
crates/helix-mempool/: Cargo.toml
crates/helix-mempool/src/: lib.rs
crates/helix-node/: Cargo.toml
crates/helix-node/src/: config.rs  main.rs  node.rs  signing_guard.rs
crates/helix-node/tests/: multi_node.rs
crates/helix-p2p/: Cargo.toml
crates/helix-p2p/src/: config.rs  conn_limits.rs  lib.rs  message.rs  peer.rs  reputation.rs  service.rs  session.rs
crates/helix-rpc/: Cargo.toml
crates/helix-rpc/src/: explorer.html  faucet.rs  lib.rs  rate_limit.rs  server.rs  types.rs
crates/helix-storage/: Cargo.toml
crates/helix-storage/src/: db.rs  lib.rs  mem.rs
crates/helix-vm/: Cargo.toml
crates/helix-vm/src/: lib.rs
crates/helix-zkp/: Cargo.toml
crates/helix-zkp/src/: air.rs  lib.rs  prover.rs
docs/: cli.md  installation.md  internals.md  reference.md  running-a-node.md  staking.md
gui/: .gitignore  README.md  index.html  package-lock.json  package.json
gui/scripts/: sync-version.mjs
gui/src/: App.tsx  api.ts  format.ts  main.tsx  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  lib.rs  node_process.rs  pricing.rs  rpc.rs  wallet.rs
gui/src/components/: StakeActionPanel.tsx  ValidatorPicker.tsx
gui/src/views/: Earn.tsx  Governance.tsx  Identity.tsx  MnemonicReveal.tsx  Names.tsx  Node.tsx  Overview.tsx  Receive.tsx  Recovery.tsx  Send.tsx  Settings.tsx  Setup.tsx  Staking.tsx  Validate.tsx
helix-gui/: .gitignore  README.md  package.json  vite.config.ts
helix-gui/src/: App.tsx  api.ts  format.ts  styles.css  types.ts
helix-gui/src-tauri/: tauri.conf.json
helix-gui/src-tauri/icons/: icon.icns
helix-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  rpc.rs  state.rs  wallet.rs
helix-gui/src/views/: MnemonicReveal.tsx  Unlock.tsx
mobile/: .gitignore  Cargo.toml  README.md  uniffi-bindgen.rs
mobile/examples/: sign_demo.rs
mobile/src/: lib.rs
scripts/: helix-dev-loop.sh
