[workspace]
members = [
    "crates/helix-crypto",
    "crates/helix-core",
    "crates/helix-consensus",
    "crates/helix-executor",
    "crates/helix-mempool",
    "crates/helix-p2p",
    "crates/helix-storage",
    "crates/helix-identity",
    "crates/helix-rpc",
    "crates/helix-node",
    "crates/helix-cli",
    "crates/helix-vm",
    "crates/helix-zkp",
]
# gui/ is a Tauri desktop app (own webview/system deps) — kept out of the workspace so
# `cargo build/test --workspace` stays exactly as before. It path-depends on helix-crypto /
# helix-core to reuse the real ML-DSA signing + transaction types (no re-implementation).
exclude = ["gui"]
resolver = "2"

[workspace.package]
# Kept in lockstep with the released git tag: the release workflow refuses to build a
# `vX.Y.Z` tag whose version does not match this line.
#
# 0.x on purpose. This shipped as v1.0.0 eleven days into the project and climbed to v1.4.0
# within the week, which told anyone reading semver that the API was stable — while the chain
# was being reset from genesis every few days, ran on a single validator, and changed its block
# format three times. 1.0 is a promise about stability that nothing here can keep yet. It costs
# nothing to say so, and claiming otherwise cost credibility that the rest of the project works
# hard to earn.
version = "0.7.3"
edition = "2021"
authors = ["SILVRA"]
license = "MIT"

[workspace.dependencies]
# Post-Quantum Cryptography — final NIST FIPS standards (RustCrypto, pure Rust)
ml-dsa = "0.1.1"       # FIPS 204 ML-DSA (signatures)
slh-dsa = "0.2.0-rc.5" # FIPS 205 SLH-DSA (hash-based signature migration target)
rand_core = "0.10"     # slh-dsa keygen wants a rand_core 0.10 CryptoRng (bridged from rand's OsRng)
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
hex = "0.4"
bs58 = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# P2P networking
libp2p = { version = "0.54", features = [
    "tcp", "noise", "yamux",
    "gossipsub", "mdns",
    "tokio", "dns", "macros",
    # Lets a node be reachable through an HTTPS reverse proxy / Cloudflare tunnel on
    # port 443, where raw TCP is not routable. See `P2PConfig::ws_listen_addr`.
    "websocket",
] }
void = "1"

# Wallet encryption
aes-gcm = "0.10"
argon2 = "0.5"

# ZK-STARK proofs (NIST finalist — ZK Proof of Personhood)
winterfell = "0.13"

# Persistence
redb = "2.1"

# WASM smart contract execution
wasmi = "0.31"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Internal crates
helix-crypto = { path = "crates/helix-crypto" }
helix-core = { path = "crates/helix-core" }
helix-consensus = { path = "crates/helix-consensus" }
helix-p2p = { path = "crates/helix-p2p" }
helix-storage = { path = "crates/helix-storage" }
helix-identity = { path = "crates/helix-identity" }
helix-executor = { path = "crates/helix-executor" }
helix-mempool = { path = "crates/helix-mempool" }
helix-rpc = { path = "crates/helix-rpc" }
helix-vm = { path = "crates/helix-vm" }
helix-zkp = { path = "crates/helix-zkp" }
helix-cli = { path = "crates/helix-cli" }
