[package]
name = "helix-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Helix blockchain CLI — wallet management, chain queries, transaction submission"

[[bin]]
name = "hlx"
path = "src/main.rs"

[dependencies]
helix-crypto.workspace = true
helix-core.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
