[package]
name = "helix-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Helix client commands (wallet, chain queries, transaction submission) — dispatched by the `helix` binary"

[lib]
path = "src/lib.rs"

[dependencies]
helix-crypto.workspace = true
helix-core.workspace = true
helix-executor.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
bip39 = "2.2.2"
rpassword = "7.5.4"
