[package]
name = "helix-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PoS + BFT consensus engine with Proof of Personhood for Helix"

[dependencies]
helix-crypto.workspace = true
helix-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
