[package]
name = "helix-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Quantum-secure cryptographic primitives for the Helix blockchain"

[dependencies]
pqcrypto-dilithium.workspace = true
pqcrypto-sphincsplus.workspace = true
pqcrypto-kyber.workspace = true
pqcrypto-traits.workspace = true
blake3.workspace = true
zeroize.workspace = true
rand.workspace = true
serde.workspace = true
hex.workspace = true
bs58.workspace = true
thiserror.workspace = true
