[package]
name = "helix-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Quantum-secure cryptographic primitives for the Helix blockchain"

[dependencies]
ml-dsa.workspace = true
slh-dsa.workspace = true
rand_core.workspace = true
blake3.workspace = true
zeroize.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bs58.workspace = true
thiserror.workspace = true
anyhow.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
