[package]
name = "helix-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction execution engine and account state machine for Helix"

[dependencies]
helix-crypto.workspace = true
helix-core.workspace = true
helix-consensus.workspace = true
helix-identity.workspace = true
helix-vm.workspace = true
helix-zkp.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
wat = "1.0"
