[package]
name = "helix-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction execution engine and account state machine for Helix"

[dependencies]
helix-crypto.workspace = true
helix-core.workspace = true
helix-consensus.workspace = true
helix-identity.workspace = true
helix-vm.workspace = true
helix-zkp.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
wat = "1.0"

# `#[cfg(kani)]` gates the Kani proof harnesses (src/lib.rs, src/genesis.rs) — only
# ever set by `cargo kani`'s own compiler driver, never by plain cargo. Without this,
# every normal `cargo build`/`check`/`test` prints an unknown-cfg warning for it.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }
