[package]
name = "helix-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "libp2p P2P networking for Helix — gossipsub block/tx broadcast, mDNS discovery"

[dependencies]
helix-crypto.workspace = true
helix-core.workspace = true
helix-consensus.workspace = true
libp2p.workspace = true
serde.workspace = true
bincode.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
void.workspace = true
