[package]
name = "helix-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST + WebSocket API for Helix node — client-facing interface"

[dependencies]
helix-crypto.workspace = true
helix-core.workspace = true
helix-storage.workspace = true
helix-mempool.workspace = true
helix-executor.workspace = true
helix-identity.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum.workspace = true
tower-http.workspace = true
